--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
     <artifactId>rethinkdb-driver</artifactId>
     <version>2.3.3</version>
   </dependency>
+  
+  <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.3.3</version>
+</dependency>
 
 		
 	</dependencies>
@@ -78,8 +85,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
